--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "morgan": "~1.9.0"
+    "express-validator": "^6.1.1",
+    "morgan": "~1.9.0",
+    "request": "^2.88.0"
   }
 }
